# AiDataVizAgent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: config.py  exceptions.py  logging.py
docs/: SETUP.md
scripts/: __init__.py  generate_sample_data.py  run_dev.py
services/ingest/: __init__.py  parser.py
services/llm/: __init__.py  openai_client.py
services/memory/: __init__.py  sql_memory.py  vector_memory.py
services/planner/: __init__.py  planner.py  spec_schema.py
services/profile/: __init__.py  profiler.py
services/renderer/: __init__.py  plotly_renderer.py  seaborn_renderer.py
streamlit_frontend/: __init__.py  app.py
streamlit_frontend/components/: chat.py  plot_controls.py  uploader.py
tests/: test_ingest.py  test_json_extraction.py  test_planner.py  test_renderer.py
