[project]
name = "ai-data-viz-agent"
version = "0.1.0"
description = "Enterprise-grade AI Data Visualization Agent with Streamlit frontend"
authors = [{ name = "AI Viz Team", email = "team@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["data-visualization", "ai", "streamlit", "openai", "plotly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.9.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "requests>=2.32.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "numpy>=2.0.0",
    "chromadb>=0.5.0",
    "tqdm>=4.66.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "black>=24.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/ai-data-viz-agent"
Documentation = "https://github.com/yourorg/ai-data-viz-agent#readme"
Repository = "https://github.com/yourorg/ai-data-viz-agent.git"
Issues = "https://github.com/yourorg/ai-data-viz-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "services", "streamlit_frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "black>=24.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "plotly.*", "seaborn.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/site-packages/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
